[package]
name = "grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "^0"
rfd="^0"
log="*"
fern="*"
wallpaper = "*"
rust-embed="6.6.1"
rand="0.8"
serde = {version = "1",features = ["derive"]}
dotenvy = "0.15"
diesel = { version = "2", features = ["sqlite"] }
home = "0.5"
once_cell = "1.17"
nanoid = "0.4.0"
chrono = "0.4"
systray = "0.4.0"